--- a/README.Rmd
+++ b/README.Rmd
@@ -282,6 +282,12 @@ mtx <- read.csv("man/tables/Table_log.csv")
 knitr::kable(mtx)
 ```
 
+# Future development
+
+- High-resolution CTCF footprinting, K562 cell line. CTCF MNase HiChIP data, long fragments correspond to nucleosome-protected DNA whereas short fragments arise from CTCF-protected DNA. [FactorFinder](https://github.com/aryeelab/cohesin_extrusion_reproducibility) tool for near-base-pair resolution CTCF detection, uses the distribution of short fragments around a CTCF binding site. Benchmarking against CTCF motif location, ChIP-seq peaks, loop anchors. A model of topological regulation by partially extruded CTCF loops. Data to be available. <details>
+  <summary>Paper</summary>
+  Sept, Corriene E., Y. Esther Tak, Christian G. Cerda-Smith, Haley M. Hutchinson, Viraat Goel, Marco Blanchette, Mital S. Bhakta, et al. “High-Resolution CTCF Footprinting Reveals Impact of Chromatin State on Cohesin Extrusion Dynamics.” Preprint. Genomics, October 23, 2023. https://doi.org/10.1101/2023.10.20.563340.
+</details>
 
 ## Citation
 
